@@ -2370,6 +2370,7 @@
 81) kernel: net: netfilter: gre: Use consistent GRE_* macros instead of ones defined by netfilter.<br>
 82) kernel: net: netfilter: gre: Use consistent GRE and PTTP header structure instead of the ones defined by netfilter.<br>
 83) kernel: net: netfilter: ftp: Remove the useless dlen==0 condition check in find_pattern.<br>
+84) kernel: net: netfilter: ftp: Remove the useless code.<br>
 <br>
 <br>
 <br>
